2019-01-18  TAMUKI Shoichi  <tamuki@linet.gr.jp>

	* manual/time.texi (strftime): Fix the wording to "alternative" rather
	than "alternate".

2019-01-16  Paul A. Clarke  <pc@us.ibm.com>

	* sysdeps/powerpc/powerpc64/multiarch/strncmp.c: Fix #ifdef.

2019-01-16  Zack Weinberg  <zackw@panix.com>

	 * support/xsignal.h (xalloc_sigstack, xfree_sigstack)
	 (xget_sigstack_location): New test support functions.
	 * support/xsigstack.c: New file, implementing them.
	 * support/tst-xsigstack.c: New test for them.
	 * support/Makefile: Update.

	 * signal/tst-minsigstksz-1.c
	 * signal/tst-minsigstksz-2.c
	 * signal/tst-minsigstksz-3.c
	 * signal/tst-minsigstksz-3a.c
	 * signal/tst-minsigstksz-4.c: New tests.
	 * signal/Makefile: Run them.

2019-01-16  Siddhesh Poyarekar  <siddhesh@sourceware.org>

	* po/libc.pot: Regenerate.

2019-01-15  Tulio Magno Quites Machado Filho  <tuliom@linux.ibm.com>

	* math/libm-test-fma.inc (fma_test_data): Set
	XFAIL_ROUNDING_IBM128_LIBGCC to more tests.

2019-01-15  Rogerio A. Cardoso  <rcardoso@linux.ibm.com>

	* sysdeps/powerpc/powerpc64/tst-ucontext-ppc64-vscr.c:
	(do_test): Changed __vector __int128_t to __vector unsigned int.

2019-01-14  Leonardo Sandoval  <leonardo.sandoval.gonzalez@intel.com>

	* sysdeps/x86_64/multiarch/Makefile (sysdep_routines): Add
	strcat-avx2, strncat-avx2, strcpy-avx2, strncpy-avx2,
	stpcpy-avx2 and stpncpy-avx2.
	* sysdeps/x86_64/multiarch/ifunc-impl-list.c:
	(__libc_ifunc_impl_list): Add tests for __strcat_avx2,
	__strncat_avx2, __strcpy_avx2, __strncpy_avx2, __stpcpy_avx2
	and __stpncpy_avx2.
	* sysdeps/x86_64/multiarch/{ifunc-unaligned-ssse3.h =>
	ifunc-strcpy.h}: rename header for a more generic name.
	* sysdeps/x86_64/multiarch/ifunc-strcpy.h:
	(IFUNC_SELECTOR): Return OPTIMIZE (avx2) on AVX 2 machines if
	AVX unaligned load is fast and vzeroupper is preferred.
	* sysdeps/x86_64/multiarch/stpcpy-avx2.S: New file.
	* sysdeps/x86_64/multiarch/stpncpy-avx2.S: Likewise.